# tauri-sqlite-rs

./: Cargo.toml  README.md
examples/app/: .gitignore  package.json
examples/app/src-tauri/: Cargo.toml  tauri.conf.json
examples/app/src-tauri/src/: main.rs
src/: lib.rs
