[package]
name = "tauri_sqlite"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas@tauri.studio>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
rusqlite = "0.21"
tauri = { path = "../tauri/tauri" }